# wyvern-hsi-labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
projects/forest_landcover/: README.md
projects/forest_landcover/outputs/: analysis_summary.txt  index_separability_tests_K5.csv  kmeans_cluster_proportions_K5.csv  kmeans_clusters_K5.tif  kmeans_stability_ari_K5.csv  sam_fullscene_class.tif  spectral_index_stats.csv
projects/forest_landcover/scripts/: 12_sam_fullscene_geotiff.py  15_unsupervised_kmeans.py  22_export_kmeans_previews.py  23_export_sam_previews.py  24_compute_indices.py  25_analysis_metrics.py
projects/forest_landcover/scripts/00_archive/: 01_open_dataset.py  02_inspect_wavelengths.py  03_quicklook_rgb_cir.py  04_compare_normalizations.py  05_roi_picker.py  06_extract_roi_spectra.py  07_run_sam.py  08_sam_with_confidence.py  09_postprocess_classmap.py  10_remove_small_regions.py  11_endmember_separability.py  13_class_stats.py  14_export_overlay_preview.py  14_export_overlay_preview2.py  15_unsupervised_kmeans.py  16_kmeans_relabel_and_preview.py  16_kmeans_relabel_and_preview2.py  (+7 more)
projects/water_quality/: README.md
projects/water_quality/outputs/: water_kmeans_K5_PCA8_summary.txt
projects/water_quality/scripts/: 03_quicklooks_rgb_fcc_water.py  04_water_mask.py  05_pca_kmeans_water.py  06_kmeans_water_features.py  08_overlay_water_classes_update.py  10_sfa_kmeans_water_classes.py  11_proxy_map_ndti_ndci.py  12_class_proxy_summary.py  13_composite_proxy_map.py  14_make_proxy_panels.py
src/wyvernhsi/: masks.py  paths.py  wavelengths.py
(+10 files in other folders)
