[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wyvern-hsi-labs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "rasterio",
  "numpy",
  "matplotlib",
  "pysptools",
  "requests",
  "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
